# TEST-BOT

TEST-BOT/: MiniMaxAlgorithm.cs  Program.cs
TEST-BOT/Properties/PublishProfiles/: FolderProfile.pubxml
monster-hunt-bot/: README.md
monster-hunt-bot/cpp/: CMakeLists.txt  bot_template_cpp.cpp
monster-hunt-bot/csharp/: BotTemplate.csproj  Program_cs.cs
monster-hunt-bot/go/: bot_template.go  go.mod
monster-hunt-bot/java/: pom.xml
monster-hunt-bot/java/src/main/java/com/monsterhunt/bot/: BotTemplateJava.java
monster-hunt-bot/javascript/: bot_template_js.js  package-lock.json  package.json
monster-hunt-bot/python/: bot_template_py.py
